force-app/main/default/objects/FlowperRecordType__mdt/FlowperRecordType__mdt.object-meta.xml
<CustomObject>
    <description>PacPoint-MV122818 - Created for BREG phase 1. Used to identify what is the flow for each filing record type and type in communities</description>
    <label>Flow per Record Type</label>
    <pluralLabel>Flow per Record Type</pluralLabel>
</CustomObject>