force-app/main/default/objects/FlowperRecordType__mdt/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV010319 - Created for BREG phase 1</description>
    <label>Account</label>
    <type>Checkbox</type>
</CustomField>