force-app/main/default/objects/FlowperRecordType__mdt/fields/AccountNameLabel__c.field-meta.xml
<CustomField>
    <fullName>AccountNameLabel__c</fullName>
    <description>PacPoint-MV121319 - Created for PVL phase 1. Used to display the right label on the wizard when creating a filing.</description>
    <label>Account Name Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>