force-app/main/default/objects/FlowperRecordType__mdt/fields/ApplicationType__c.field-meta.xml
<CustomField>
    <fullName>ApplicationType__c</fullName>
    <description>PacPoint-MV122818 - Created for BREG phase 1</description>
    <label>Application Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>