force-app/main/default/objects/FlowperRecordType__mdt/fields/ButtonNameLabel__c.field-meta.xml
<CustomField>
    <fullName>ButtonNameLabel__c</fullName>
    <description>PacPoint-MV121719 - Created for BREG phase 1</description>
    <label>Button Name Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>