force-app/main/default/objects/FlowperRecordType__mdt/fields/CreateAccount__c.field-meta.xml
<CustomField>
    <fullName>CreateAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV122818 - Created for BREG phase 1</description>
    <label>Create Account</label>
    <type>Checkbox</type>
</CustomField>