force-app/main/default/objects/FlowperRecordType__mdt/fields/DisplayPayment__c.field-meta.xml
<CustomField>
    <fullName>DisplayPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV122818 - Created for BREG phase 1</description>
    <label>Display Payment</label>
    <type>Checkbox</type>
</CustomField>