force-app/main/default/objects/FlowperRecordType__mdt/fields/FilingRecordType__c.field-meta.xml
<CustomField>
    <fullName>FilingRecordType__c</fullName>
    <description>PacPoint-MV122818 - Created for BREG phase 1</description>
    <label>Filing Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>