force-app/main/default/objects/FlowperRecordType__mdt/fields/LastNameLabel__c.field-meta.xml
<CustomField>
    <fullName>LastNameLabel__c</fullName>
    <description>PacPoint-MV011420 - Created for PVL phase 1. Used to display the right label on the wizard when creating a filing.</description>
    <label>Last Name Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>