force-app/main/default/objects/FlowperRecordType__mdt/fields/PersonAccount__c.field-meta.xml
<CustomField>
    <fullName>PersonAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV010319 - Created for BREG phase 1</description>
    <label>Person Account</label>
    <type>Checkbox</type>
</CustomField>